# simple-microservice

./: .gitignore  README.md  docker-compose.yml
auth-service/: .env.development  .env.example  go.mod  go.sum  main.go
auth-service/auth/: auth.controller.go  auth.dao.go  auth_controller.go  auth_controller_test.go  auth_dao.go  jwt.go  jwt_test.go
auth-service/config/: config.go
auth-service/db/: db.go
auth-service/profile/: profile_controller.go
auth-service/proxy/: network.go  proxy_controller.go  proxy_controller_test.go  service_registry.go  service_registry_test.go
auth-service/router/: router.go
mongo/: Cargo.toml  Dockerfile.dev  init.sh
mongo/src/: main.rs
profile-service/: .env.development  Dockerfile.dev  main.go
profile-service/config/: config.go
profile-service/db/: db.go
profile-service/entrypoint/: entrypoint.go  entrypoint_test.go
profile-service/profile/: profile_controller.go  profile_controller_test.go  profile_dao.go
profile-service/router/: router.go
user-service/: go.mod  main.go
user-service/config/: config.go
user-service/controller/: controller.go
user-service/db/: db.go
user-service/router/: router.go
