[package]
authors = ["Luis Osta <luisosta1999@gmail.com>"]
edition = "2018"
name = "mongo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.0.0"
planter = {git = "https://github.com/valencian-digital/planter", branch = "main"}# from online repo```
